# NoteBook

./: CMakeLists.txt  README.md  main.cpp
.github/workflows/: cmake-multi-platform.yml
include/Data/: networkInterface.h
include/Data/Networking/: IAttachmentTransferService.h  ICloudSyncService.h  ILanSyncService.h  INetworkAuthService.h  SyncManager.h
include/Data/Project/: ProjectCreateDialog.h
include/Data/attachments/: AttachmentService.h  AttachmentValidator.h
include/Data/helper/: validater.h
include/Data/workspace/: WorkspaceCreateDialog.h  WorkspaceDeleteDialog.h  WorkspaceRepository.h  WorkspaceSettingsWindow.h  WorkspaceSwitchDialog.h
include/Data/workspace/Manager/: NoteManager.h  TabManager.h  TaskManager.h
include/Data/workspace/Structure/: FileAttachment.h  Note.h  Project.h  Task.h
include/UI/: mainWIndow.h
include/UI/components/Content_Windows/: IWorkspaceView.h  MainContentView.h  WorkspaceView.h  WorkspaceViewFactory.h
include/UI/components/Content_Windows/page/: NetworkTestPage.h  loginPage.h  wsHomePage.h  wsNotePage.h
include/UI/components/Dialogs/: DropAreaWidget.h  UploadDialog.h
include/UI/components/SIde_Bar/: sideBar.h
include/UI/components/SIde_Bar/componets/: FiltersSection.h  FooterSection.h  PrimaryActionSection.h  ProjectsSection.h  WorkspaceContextSection.h
include/UI/components/Top_Menubar/: TabBar.h  windowsAction.h
include/UI/helpers/: IconHelper.h
include/helpers/: AppStateController.h  AttachmentManager.h  Task.h  Workspace.h  WorkspaceCommand.h
resources/: resources.qrc
resources/qml/: SideBar.qml  wsHomeLinker.qml  wsNoteEditorLinker.qml
resources/qml/components/: TabBar.qml
resources/qml/warningBox/: NoteDeletion.qml
resources/qml/wsHomePage/: HeaderSection.qml  RecentNotesColumn.qml  TaskFocusColumn.qml
resources/qml/wsNoteEditor/: NoteHeader.qml
src/Data/Project/: ProjectCreateDialog.cpp
src/Data/workspace/: WorkspaceCreateDialog.cpp  WorkspaceDeleteDialog.cpp  WorkspaceRepository.cpp  WorkspaceSettingsWindow.cpp  WorkspaceSwitchDialog.cpp
src/Data/workspace/Manager/: NoteManager.cpp  TabManager.cpp  TaskManager.cpp
src/UI/: mainWindow.cpp
src/UI/componets/Content_Windows/: MainContentView.cpp  WorkspaceView.cpp
src/UI/componets/Content_Windows/Page/: NetworkTestPage.cpp  wsHomePage.cpp
src/UI/componets/Dialog/: DropAreaWidget.cpp  UploadDialog.cpp
src/UI/componets/Side_Bar/: sideBar.cpp
src/UI/componets/Side_Bar/Components/: FiltersSection.cpp  PrimaryActionSection.cpp  ProjectsSection.cpp  WorkspaceContextSection.cpp
src/UI/componets/Top_Menubar/: NavigationBar.cpp  TabBar.cpp  infoBar.cpp  windowsAction.cpp
src/helpers/: AppStateController.cpp
